--- a/watercore-base/pom.xml
+++ b/watercore-base/pom.xml
@@ -68,5 +68,10 @@
             <version>1.5.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-api</artifactId>
+            <version>4.7.0</version>
+        </dependency>
     </dependencies>
 </project>
