--- a/watercore-base/pom.xml
+++ b/watercore-base/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>watercore-base</artifactId>
 
     <properties>
-        <project.build.encoding>UTF-8</project.build.encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
