add modulemanager base implementation, rename watercore-api to watercore-base. TODO

--- a/watercore-api/pom.xml
+++ b/watercore-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>watercore-base</artifactId>
+    <artifactId>watercore-api</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
