--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>0.0.0-SNAPSHOT</version>
     <modules>
-        <module>watercore-base</module>
+        <module>watercore-api</module>
     </modules>
 
     <properties>
