--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.lucyy.water</groupId>
-    <artifactId>watercore</artifactId>
+    <groupId>me.lucyy</groupId>
+    <artifactId>watercore-parent</artifactId>
     <packaging>pom</packaging>
     <version>0.0.0-SNAPSHOT</version>
+
     <modules>
         <module>watercore-api</module>
         <module>watercore-base</module>
