--- a/watercore-base/pom.xml
+++ b/watercore-base/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>me.lucyy.water</groupId>
-        <artifactId>watercore</artifactId>
+        <groupId>me.lucyy</groupId>
+        <artifactId>watercore-parent</artifactId>
         <version>0.0.0-SNAPSHOT</version>
     </parent>
 
@@ -86,7 +86,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>me.lucyy.water</groupId>
+            <groupId>me.lucyy</groupId>
             <artifactId>watercore-api</artifactId>
             <version>0.0.0-SNAPSHOT</version>
         </dependency>
