--- a/watercore-base/pom.xml
+++ b/watercore-base/pom.xml
@@ -76,6 +76,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jdbc</id>
+            <url>https://mvnrepository.com/artifact/mysql/mysql-connector-java/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -89,6 +93,11 @@
             <groupId>me.lucyy</groupId>
             <artifactId>watercore-api</artifactId>
             <version>0.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.49</version>
         </dependency>
     </dependencies>
 </project>
