load modules from files, basic example module

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>watercore-api</module>
         <module>watercore-base</module>
+        <module>watercore-helloworld</module>
     </modules>
 
     <build>
