--- a/watercore-base/pom.xml
+++ b/watercore-base/pom.xml
@@ -89,6 +89,7 @@
             <groupId>me.lucyy</groupId>
             <artifactId>watercore-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
