--- a/watercore-base/pom.xml
+++ b/watercore-base/pom.xml
@@ -76,6 +76,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jdbc</id>
+            <url>https://mvnrepository.com/artifact/org.clojure/java.jdbc/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -90,6 +94,12 @@
             <artifactId>watercore-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.49</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
