--- a/watercore-base/pom.xml
+++ b/watercore-base/pom.xml
@@ -91,5 +91,10 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>me.lucyy</groupId>
+            <artifactId>LucyCommonLib</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 </project>
