--- a/amethyst-api/pom.xml
+++ b/amethyst-api/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>me.lucyy</groupId>
-        <artifactId>watercore-parent</artifactId>
+        <artifactId>amethyst-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>watercore-api</artifactId>
+    <artifactId>amethyst-api</artifactId>
 
     <build>
         <plugins>
