--- a/amethyst-base/pom.xml
+++ b/amethyst-base/pom.xml
@@ -6,11 +6,11 @@
 
     <parent>
         <groupId>me.lucyy</groupId>
-        <artifactId>watercore-parent</artifactId>
+        <artifactId>amethyst-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>watercore-base</artifactId>
+    <artifactId>amethyst-base</artifactId>
     <packaging>jar</packaging>
 
     <properties>
@@ -87,7 +87,7 @@
         </dependency>
         <dependency>
             <groupId>me.lucyy</groupId>
-            <artifactId>watercore-api</artifactId>
+            <artifactId>amethyst-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
