--- a/amethyst-helloworld/pom.xml
+++ b/amethyst-helloworld/pom.xml
@@ -21,13 +21,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>watercore-parent</artifactId>
+        <artifactId>amethyst-parent</artifactId>
         <groupId>me.lucyy</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>watercore-helloworld</artifactId>
+    <artifactId>amethyst-helloworld</artifactId>
 
     <repositories>
         <repository>
@@ -39,7 +39,7 @@
     <dependencies>
         <dependency>
             <groupId>me.lucyy</groupId>
-            <artifactId>watercore-api</artifactId>
+            <artifactId>amethyst-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
