--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.lucyy</groupId>
-    <artifactId>watercore-parent</artifactId>
+    <artifactId>amethyst-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
-        <module>watercore-api</module>
-        <module>watercore-base</module>
-        <module>watercore-helloworld</module>
+        <module>amethyst-api</module>
+        <module>amethyst-base</module>
+        <module>amethyst-helloworld</module>
     </modules>
 
     <properties>
