--- a/amethyst-base/src/main/resources/plugin.yml
+++ b/amethyst-base/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
-name: WaterCore
-main: me.lucyy.amethyst.core.core.WaterCorePlugin
+name: Amethyst
+main: me.lucyy.amethyst.core.core.AmethystPlugin
 version: ${project.version}
-authors: [ WaterMC ]
+authors: [ "Amethyst Dev Team" ]
+website: https://amethyst.redaam.net
