--- a/amethyst-base/pom.xml
+++ b/amethyst-base/pom.xml
@@ -91,5 +91,11 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>me.lucyy</groupId>
+            <artifactId>squirtgun-bukkit</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
