--- a/amethyst-base/pom.xml
+++ b/amethyst-base/pom.xml
@@ -97,5 +97,10 @@
             <version>2.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>me.lucko</groupId>
+            <artifactId>adventure-platform-bukkit</artifactId>
+            <version>4.7.0</version>
+        </dependency>
     </dependencies>
 </project>
