--- a/amethyst-base/pom.xml
+++ b/amethyst-base/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>me.lucyy</groupId>
             <artifactId>squirtgun-bukkit</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-pre1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
